prevent scroll on ios

--- a/src/main.css
+++ b/src/main.css
@@ -12,6 +12,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     min-height: -webkit-fill-available;
+    overflow: hidden;
     margin: 0;
     padding: 0;
 }
